fixed the covering issue i think

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -71,18 +71,22 @@
 
 .theme-main body {
   background-color: #E5E5E5;
+  padding-top: 45px;
 }
 
 .theme-bluesTheme body {
   background-color: #d9e7ee;
+  padding-top: 45px;
 }
 
 .theme-Cloudy body {
   background-color: #D8D8D8;
+  padding-top: 45px;
 }
 
 .theme-OnceAMatadorAlwaysAMatador body {
   background-color: #FFFFFF;
+  padding-top: 45px;
 }
 
 .theme-main html * {
