--- a/resources/src/sass/_layout.scss
+++ b/resources/src/sass/_layout.scss
@@ -1,6 +1,7 @@
 body {
   @include themify($themes) {
     background-color: themed("looksGray");
+    padding-top: 45px;
   }
 }
 
